feat: add role middleware
